--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -61,10 +61,10 @@
         <li class="nav-item">
           <a
             class="nav-link"
-            href="sections/notificaciones/notificaciones.html"
+            href="sections/notificaciones/tareas.html"
             target="content-frame"
           >
-            <i class="fas fa-bell" style="color: #BDC3C7;"></i> Notificaciones
+          <i class="fas fa-tasks" style="color: #BDC3C7;"></i> Tareas
           </a>
         </li>
         <hr class="divider" />
